# ChangeLog for dev-php/igbinary
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php/igbinary/ChangeLog,v 1.10 2014/09/30 15:05:43 grknight Exp $

  30 Sep 2014;  <grknight@gentoo.org> -igbinary-1.1.1-r1.ebuild:
  Cleanup old

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> igbinary-1.1.1-r2.ebuild:
  Stable for amd64, wrt bug #470440

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> igbinary-1.1.1-r2.ebuild:
  Stable for x86, wrt bug #470440

  01 Apr 2013; Ole Markus With <olemarkus@gentoo.org> +files/zts-fix.patch,
  igbinary-1.1.1-r2.ebuild:
  Fix ZTS build. Bug 435742

*igbinary-1.1.1-r2 (28 Mar 2013)

  28 Mar 2013; Ole Markus With <olemarkus@gentoo.org> +igbinary-1.1.1-r2.ebuild:
  Revbump supporting php 5.5

  05 Mar 2013; Ole Markus With <olemarkus@gentoo.org> igbinary-1.1.1-r1.ebuild:
  EAPI bump

  21 Oct 2012; Markus Meier <maekke@gentoo.org> igbinary-1.1.1-r1.ebuild:
  x86 stable, bug #427024

  15 Jan 2012; Ole Markus With <olemarkus@gentoo.org> -igbinary-1.1.1.ebuild:
  Removing PHP 5.2 only ebuilds/packages

*igbinary-1.1.1-r1 (11 Nov 2011)

  11 Nov 2011; Ole Markus With <olemarkus@gentoo.org>
  +igbinary-1.1.1-r1.ebuild:
  Revbump - adding support for 5.4

*igbinary-1.1.1 (07 Feb 2011)

  07 Feb 2011; <olemarkus@gentoo.org> +igbinary-1.1.1.ebuild, +metadata.xml:
  First dev-php/igbinary ebuild. Thanks to jbergstroem