@@ -4,15 +4,21 @@ Hash: SHA256
 DIST futures-2.1.4-20130706.tar.gz 37132 SHA256 1ce7feba60c2ea7f9930289a6224167eb9e0f89801b69dacb0bf6ef020622931 SHA512 e18a3e9316ad6a255af30197b39f1820e7753b5f56ea9c4b39de340d4f3bc8288b6f08650345a95db9afbeb2c21bd0aad41b828af5d653d037a80470cff1164b WHIRLPOOL a920dfd69743eb683933c224291fef28c8c9c610030b409037114d95eb58e2ecd058a8f6e89d9a6814a49ccd632d80e69ca5b7441d9c36b7d7b903760f70ced2
 DIST futures-2.1.5.tar.gz 25962 SHA256 735b751d66ad20071adf32f7399f6f177f3b46ff1879884a294546cec1d5782f SHA512 d457b0d5635ba4295481127f1fd0d6197c83d217bb2abdb1bf50b96fbdfce1c7499d64a052c39d30d4bf50ec822e1c34b7722d88b4c542e42a6d7ddfa96d66b5 WHIRLPOOL 548fe56a24e67a0fa547e284b34dc1058e8174fc02ffed1e463b1e5c28c7ad3ab30587515dd3871a39945eec711497116be4970a86681de64a7b9991401d3149
 DIST futures-2.1.6.tar.gz 26445 SHA256 33f39102b631fa0a030b24c4341ba1f48558e435946d6735d47fe1f739d757c4 SHA512 1563dcfbcdcfe02a5b3d955d88f91a76e802292ab603acde8962a5f7562b3f4a4534e01217eb1d82a5368c98364abf34d2cd899b093594905e071c31ed1d4a34 WHIRLPOOL 88b0e14f9039944b0bdb6516155e4a715f797a2836f923776a3e2834190ca4ba7596ff82db596a6024b3edb033378a0361a54adaf6f4b8fe48ef409956cb7fad
+DIST futures-2.2.0.tar.gz 26786 SHA256 151c057173474a3a40f897165951c0e33ad04f37de65b6de547ddef107fd0ed3 SHA512 5f2a835b4b3f6bf1c4f086984a2e1d6ab30004b9af9298ef8afb23549014695ba26b43500dad3ee873e52aacd75911a42cd4ec9dfae6522cb99476a480dc83ee WHIRLPOOL 5c38f64759d0f2a15a536e8a5cb5c7473ce61d46242fc0c0bc737dfe91ce9b6573c1291a6f305953b96cd6298e1e41f7e27b45a2f0c2647315826ad9a1246ccd
 EBUILD futures-2.1.4.ebuild 945 SHA256 19317d0a6f0f73d689e3a02eccefcd0112aa7c87eca48ef82f75f62b98a92788 SHA512 34b4894d4ba401a16b405a4889c8e200ae8876532faa5104daca71545875fb53b404aae4b681ef2e3d4fac8cdeb4e420eaaafefae808af4fa22e56840972ec74 WHIRLPOOL 77437d440991ca24a7c6eb422b0ab38586b27faf34ecac26bfcff8a88b38e3f44811b0c4bc95177a50a1497c322bc2c46ef573517a30cd6394536c79edecd235
 EBUILD futures-2.1.5.ebuild 1031 SHA256 2d1617466bfb9634bebeb549ee45071127bf8f6a2c61a1b11670302838f18569 SHA512 18e3fcef29a94f1a90cd44dfb545bcfb0c281b5ffad2ee181f576f20b3a0e1d0f1518980593588c8d813a7b8dc1b6abf5877a129f11ec6b5fe6d185e311c024c WHIRLPOOL 44a107c68d79054fc5eb0ffdeabeb485635646725cc04380fec8aa6578e8156f3f9de6a5c5d8d92cc818d690aaf092a2894ce6b699bdaafb96c8d57499f1b2fe
 EBUILD futures-2.1.6.ebuild 1208 SHA256 bc5927eeaf5d286b158eec5a74e0e6d79b95729c59c7b6fecac6a07e0ebb0705 SHA512 b4d827b0940ac13c936ea29b2489b78d77eab4e948c8b6b01b9b81cd4b4af085c5c82ea6ecf9ef1ea1bce468567c8c4296f875bd406e11c8603d2032848f3ead WHIRLPOOL 83b01c22b4df80cf1347730332fb9a10dd101223aea54488a1eb894e9a178fe78d7768c28af2603bc3fb9c9ac788b172dec08bdf87bab1ddc4293c62caca3f6d
-MISC ChangeLog 1617 SHA256 27e2d3a4d34bb26be61543f2ae571bdf000e1f0d279b7933791eac702680320d SHA512 5c976f0576485e68f9b99151c83e472a64abd0d520605ae52a6cff8a05a95d91cd55b263b0e2b6b2f96a47e2a5f864efa7318edc87ab2d1bac1adf848c6f2550 WHIRLPOOL 0362f1584ced0abb90a76568f854c68c1cc338e9ba60c56dd8a98bf4f4705ec7a8f83ed2fc3e49109bee309a258fada1fbc855cb152295a3cc1b481812d9828e
+EBUILD futures-2.2.0.ebuild 1210 SHA256 95a9c1cdeb55ae8be53d60366c7bddda060141c008d2a94946f4e59ad1b658f9 SHA512 2e794d70b3f51514151bb106d9207ae591e8a051be0599d60ab8843046739815d73b2b5d0b037dd8e9a457f26211def883c1462f8a2c61b85c979b3d7adbc2d4 WHIRLPOOL cd0e3808ef790bf651dda0adf67a66321ec94b82ef91512db30f09721ac771168a8a03b1cbb8e77e65814e966559e9c7eb8e7992ca9c8bc9a119a2f28bd4ca41
+MISC ChangeLog 1738 SHA256 79a74b6587f415a13f5a5f678e6ab8af5d78c186f0aba7ae523be56199fd70b9 SHA512 7860227011c003f0a6ff5cd1636dc6d1382b4259e2fc52a293a22262703cb6c29980d905106814b69fa599e010545bdea9c2227380c15a5546718ce4f696ba5f WHIRLPOOL afdb7266ae4290f95fdcbc61bdfbbb4072736f3baebedfd01b3f901aef62f04ea313b70bb10b93363857f7e2eadb798e60e2eaae4d03c019c1f1a515c63251fa
 MISC metadata.xml 230 SHA256 24e1e0ac25023b4ffa2df94267196ae0a779b8c0fb6d86212c51097937b6209b SHA512 c269a4a9029e1d19f97b4d15f45d57c1b31bf75ef86fccb70534d57a19ee42dd62d76b58b5a30f01e8534364d0b8467ce8828df829a139d68e19ada0b433f041 WHIRLPOOL 61b293453ebcea7a5a34cc4fc26e2cbe73982dd52d758f729b32bfd1b02c477f59ef9206a219423be1b33b35d8ac6164231a4ec558ef7adb08b1faeb8b7acdad
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlNnFwwACgkQso7CE7gHKw3FlQCfUD78i5otfcvEBLuGUe0LZBGx
-YDYAoNXb8JPRgwoq4TsL8qO/gbeCQGe+
-=GhcO
+iQEcBAEBCAAGBQJUK2zeAAoJEEqz6FtPBkyjqTgH/36GCSUdOlqkYL5IXIWwfyVL
+iK/Joy6mXHmCB+mWCkVDCDyW7gFnrSWI9SnWJ4ECjB4v2sWhus14THFvI3nCfSP3
+QWlx1zW33mR6mouQDd906AYeDcM8ixF0DfxUkJ6efgS1+c5q0WfHos5tsjJP5ha/
+ghwqT8s+zX2Pu6aBuXp4sNrGxifOUTcJNN8eEP2FAKpR/tQcbTXCsTCr8An9DhZx
+Ra6Pt6n0cJfbPMkkA3nWiTgSjfnugJUIdIckqTEC3KtGyrxINtCdmzKzFr0DeGqi
+lzU84cVubf4Gzn/fbUfxXl+WBu1wjBgQz86keoi89dIja22OIut9LY4jWdETJd8=
+=zlws
 -----END PGP SIGNATURE-----
