@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST exifr-1.1.3.gem 229376 SHA256 2259f822c2f609f4b317e650984ec272f6f5db8df3749403028ec8627fde4001 SHA512 dc357388710811614503f527dcea2f431a5921a9bab49a9f9774ed185333ddedc8aa5a6063212cf81210b104ae14d034366de2349a02bc2b69da2892ed13ee0a WHIRLPOOL 84c74b7a1445c5fb08e61da70b7a0d6070f087a54ef5b4b7556a3037a9bf47e900604748d34f472723e66c7c806e06ae9b82f4e7f1a567dd2dd3bbb4b0405a8b
+DIST exifr-1.2.0.gem 224768 SHA256 a0b8bea215a83b3ca40f26c8fce5eba8f45456d015d47f35be3bcf294dc3a5f6 SHA512 e32bbdd5d8de0a4e725fb45c39e4418e88f86674cd62a65330152dca8743b97f43d43eac5f5622d551e17784319ddd243d96a60c69def34d7f237c87b7480bcd WHIRLPOOL 72b3896db06d5e69336f00a521c646c11c228e8a5bb86c7e26adaf494c23708177272ad81a66d88656387c15338af1c9d100e145ad4a19d0b3c53dc7f296d731
 EBUILD exifr-1.1.3-r1.ebuild 611 SHA256 2bf77692854a4619d3e46b32222bc378e9f189ed31e7b5536e05c7ce7d0c1871 SHA512 83506d215222353dde332d51e403df67087fec6c6bcb46a981c1af32eb3171815aa5c2065e204b4fc18c8d6ce748983e6ffb84e9dd06bd48c268028f8ada5e7b WHIRLPOOL 22867e8ea483d2a4dd64b0613c20afaa3cfd14d0794c793f8afe037793396a054faeaa8cc4d4f3dd99f6196e15b9ea41914fab4165020d94aa08ea9557ff0e7c
-MISC ChangeLog 4177 SHA256 ceddb3f84864ef6216a68f1bc56b4ebbcbaa1b66413da6adca1fc0f93f09c05d SHA512 6abbf25447fef5783c39f30a4c278055a492aef7b0e0ceb560e9bb23a63d8bf1f1c27cec3b9ed03cd11a1bd5a6f2b728a6b3de440dd32629a59fe2dbda28109d WHIRLPOOL 3d015909c3570ce9feb568a7fdc8432e985167ab007715d98014bd7117bf31632463951e047f8a2c9e2a720a7399959a25e601179a2a8fca172bfd1c56dac6ba
+EBUILD exifr-1.2.0.ebuild 609 SHA256 2d34316bbc7c6fe8cd2fcbcd626b6e99d99ce5a027a05983d5a1f5b1a2c45592 SHA512 8a06682ba8e1f04ac4ea1f0b7f8e9b6d50300b0424d5073291db0bd397bec9d85b17716a954cf538bc72334781181b1dd856694be83c4d093cad291c4d06eb65 WHIRLPOOL 814d448cbcf7d2fb57c913bfb27af151c3adc1530a67c9e4ff8c968bd769920c2f9b26c1c4e713f3a70b42b60df41287f2309e0baa39ab424e2cc851c1311013
+MISC ChangeLog 4294 SHA256 576f1d204a376c9770bc1f96cccee21343698b570bd05bf2db1f4aae0ac85108 SHA512 6cef5a910fa1947323c68bf30550ca4b8da9f80bb800779b61dcf7deb698856c4be40259b8619f62a30dadf8b6aad78aeea26e21b67b0873886dfc676ecdb530 WHIRLPOOL 53838aa8d5da6463323d7c8144024ad1a030203f291971877c906ddb22cbb3a1849129504ecd1586c2bdb6d67628a3c6c60384e5257890ae9eb6844394ebccc0
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlQrk6YACgkQiIP6VqMIqNegfQD/QbEdxmnLn0QZbFwuNNb7JzFr
+IUyn3yo4x5XO48+6iDsA/354v7lOFBUQp41q90ohzOfbMPfdBUu+4QZn7Ks2BX+3
+=CZkL
+-----END PGP SIGNATURE-----
