@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/exifr
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/exifr/ChangeLog,v 1.34 2014/07/25 13:10:15 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/exifr/ChangeLog,v 1.35 2014/10/01 05:39:44 graaff Exp $
+
+*exifr-1.2.0 (01 Oct 2014)
+
+  01 Oct 2014; Hans de Graaff <graaff@gentoo.org> +exifr-1.2.0.ebuild:
+  Version bump.
 
   25 Jul 2014; Manuel Rüger <mrueg@gentoo.org> exifr-1.1.3-r1.ebuild:
   Add ruby21 target.
